# mkdocstrings-twincat

./: .copier-answers.yml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  build_uv.ps1  build_uv.py  duties.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  config.yml
assets/: _mkdocstrings.css
config/: ruff.toml
config/vscode/: launch.json
css/: material.css  mkdocstrings.css
docs/.overrides/partials/: comments.html
docs/reference/: api.md  tcunit.md
docs/usage/: customization.md  index.md
docs/usage/configuration/: documentation.md  general.md  headings.md  index.md
js/: feedback.js
reference/api/: index.html
reference/tcunit/: index.html
scripts/: gen_credits.py  griffe_extensions.py  mkdocs_hooks.py
search/: search_index.json
src/mkdocstrings_handlers/twincat/: __init__.py  handler.py  rendering.py
src/mkdocstrings_handlers/twincat/_internal/: config.py  debug.py  handler.py  rendering.py
src/mkdocstrings_handlers/twincat/templates/material/: DataTypeSummary.html  FunctionBlockSummary.html  InOutPutSummary.html  InterfaceSummary.html  MethodSummary.html  PropertySummary.html  children.html.jinja  data.html.jinja  documentation.html.jinja  dut.html.jinja  functionblock.html  gvl.html.jinja  index.html.jinja  itf.html.jinja  method.html.jinja  plcproject.html.jinja  pou.html.jinja  property.html.jinja  style.css  summary.html.jinja  tcdocumentation.html.jinja  tcdut.html.jinja  tcitf.html.jinja  tcmethod.html.jinja  tcplcproject.html.jinja  tcpou.html.jinja  tcproperty.html.jinja  tcvariable_section.html.jinja  variable.html.jinja  variable_section.html.jinja
src/mkdocstrings_handlers/twincat/templates/material/_base/: base.html.jinja  children.html.jinja  data.html.jinja  documentation.html.jinja  dut.html.jinja  gvl.html.jinja  index.html.jinja  itf.html.jinja  labels.html.jinja  method.html.jinja  plcproject.html.jinja  pou.html.jinja  property.html.jinja  summary.html.jinja  tcdocumentation.html.jinja  tcdut.html.jinja  tcitf.html.jinja  tcmethod.html.jinja  tcpou.html.jinja  tcproperty.html.jinja  tcvariable_section.html.jinja  variable.html.jinja  variable_section.html.jinja
src/mkdocstrings_handlers/twincat/templates/material/_base/summary/: duts.html.jinja  gvls.html.jinja  itfs.html.jinja  methods.html.jinja  pous.html.jinja  properties.html.jinja  variables.html.jinja
src/mkdocstrings_handlers/twincat/templates/material/summary/: duts.html.jinja  gvls.html.jinja  itfs.html.jinja  methods.html.jinja  pous.html.jinja  properties.html.jinja  variables.html.jinja
src/mkdocstrings_twincat/: __init__.py  __main__.py
src/mkdocstrings_twincat/_internal/: cli.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_themes.py
twincatproject/POUs/Functions/: TEST_FINISHED_NAMED.TcPOU
usage/: index.html
usage/configuration/: index.html
usage/configuration/documentation/: index.html
usage/configuration/general/: index.html
usage/configuration/headings/: index.html
usage/customization/: index.html
