[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocstrings-twincat"
description = "A Twincat handler for mkdocstrings that uses pytwincatparser."
authors = [{name = "Samuel Ruckli", email = "privat@samuelruckli.ch"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["mkdocstrings", "twincat", "documentation", "mkdocs", "pytwincatparser"]
version = "0.1.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "mkdocstrings>=0.18",
    "pytwincatparser>=0.1.0",
]

[project.urls]
Homepage = "https://drehstromer.github.io/mkdocstrings-twincat"
Documentation = "https://drehstromer.github.io/mkdocstrings-twincat"
Changelog = "https://drehstromer.github.io/mkdocstrings-twincat/changelog"
Repository = "https://github.com/drehstromer/mkdocstrings-twincat"
Issues = "https://github.com/drehstromer/mkdocstrings-twincat/issues"
Discussions = "https://github.com/drehstromer/mkdocstrings-twincat/discussions"
Gitter = "https://gitter.im/mkdocstrings-twincat/community"
Funding = "https://github.com/sponsors/drehstromer"

[project.entry-points."mkdocstrings.handlers"]
twincat = "mkdocstrings_handlers.twincat:get_handler"


[tool.hatch.build]
packages = ["src/mkdocstrings_handlers"]
exclude = ["**/.pytest_cache"]
include = [
    "docs",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.shared-data]
"share" = "share"

[tool.uv]
# Development dependencies
[tool.uv.dev-dependencies]
maintain = [
    "build>=1.2",
    "git-changelog>=2.5",
    "twine>=5.1",
    "yore>=0.3.3",
]
ci = [
    "duty>=1.6",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
]
docs = [
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-llmstxt>=0.1",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocs-section-index>=0.3",
    "mkdocstrings[python]>=0.29",
    "tomli>=2.0; python_version < '3.11'",
]
default-groups = ["maintain", "ci", "docs"]
