[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mkdocstrings-twincat"
description = "A Twincat handler for mkdocstrings that uses pytwincatparser."
authors = [{name = "Samuel Ruckli", email = "privat@samuelruckli.ch"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["mkdocstrings", "twincat", "documentation", "mkdocs", "pytwincatparser"]
version = "0.1.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Documentation",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "mkdocstrings>=0.18",
    "pytwincatparser>=0.1.2",
]

[project.urls]
Homepage = "https://drehstromer.github.io/mkdocstrings-twincat"
Documentation = "https://drehstromer.github.io/mkdocstrings-twincat"
Changelog = "https://drehstromer.github.io/mkdocstrings-twincat/changelog"
Repository = "https://github.com/drehstromer/mkdocstrings-twincat"
Issues = "https://github.com/drehstromer/mkdocstrings-twincat/issues"
Discussions = "https://github.com/drehstromer/mkdocstrings-twincat/discussions"
Gitter = "https://gitter.im/mkdocstrings-twincat/community"
Funding = "https://github.com/sponsors/drehstromer"

[project.entry-points."mkdocstrings.handlers"]
twincat = "mkdocstrings_handlers.twincat:get_handler"


[tool.hatch.build]
packages = ["src/mkdocstrings_handlers"]
exclude = ["**/.pytest_cache"]
include = [
    "docs",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.shared-data]
"share" = "share"
